package com.laurenci.hydrotrack.core.user;

public enum Sex {
    MALE, FEMALE, UNCERTAIN, OTHER
}
