@startuml
class User {
    - Long id
    - String username
    - Double expectedDailyAmount
    - Profile profile
    --
    JavaBean's methods and conctructors
}

class Profile {
    - Long userId
    - String firstName
    - String lastName
    - Sex sex
    - LocalDate birthdayDate
    --
    JavaBean's methods and conctructors
}

enum Sex {
    MALE
    FEMALE
    UNCERTAIN
    OTHER
}

User *-- Profile
Profile o-- Sex 

class Drink {
    - Long id
    - DrinkType type
    - String brand
    - String name
    --
    JavaBean's methods and conctructors
}

class CustomDrink {
    - Long userId
    --
    JavaBean's methods and conctructors
}

class DrinkType {
    - String type
    - DrinkGroup group
    --
    JavaBean's methods and conctructors
}

enum DrinkGroup {
    WATER
    TEA
    COFFEE
    ...
}

Drink <|-- CustomDrink
Drink o-- DrinkType
DrinkType o-- DrinkGroup

class Record {
    - RecordId id
    - Drink drink
    - DrinkArea area
    - Double amount
    --
    JavaBean's methods and conctructors
}

enum DrinkArea {
    SYSTEM
    CUSTOM
}

Record o-- DrinkArea

class RecordId {
    - Long userId
    - Long drinkId
    - LocalDateTime date
    --
    JavaBean's methods and conctructors
}

Record *-- RecordId
Record o-- Drink

class Report {
    - ReportId id
    - Double actualDailyAmount
    - Double expectedDailyAmount
}

class ReportId {
    - Long userId
    - LocalDate date
    --
    JavaBean's methods and conctructors
}

Report *-- ReportId

enum ActivityLevel {
    - Integer mlPerKg
    - ActivityLevel(Integer mlPerKg)
    --
    LOW(36)
    MODERATE(40)
    HIGH(46)
}

class AgeCorrectionCoefficient {
    {static} getCoefficient(Integer age) : Double
}
@enduml
